# skop-rs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yaml
spec/: plugin-marketplaces.md
src/: cli.rs  main.rs  model.rs  util.rs
