[package]
name = "skop"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tempfile = "3.10"
flate2 = "1.0"
tar = "0.4"
directories = "6.0"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
